finish revising intro, expanding lit review, including ref list

--- a/draft.tex
+++ b/draft.tex
@@ -41,6 +41,7 @@ kbuzard@syr.edu\\
 Ben Horne\\ 
 University of California, San Diego\\
 \\}
+\date{September 30, 2016}
 %To Do : define what is ineffieicncy
 
 \begin{document}
@@ -69,37 +70,38 @@ We will approach the commitment problem through this same general understanding,
 %In addition to concessions, De Dreu also reports laboratory results on mediation; he concludes that a weaker mediator should work with promises while a more powerful one can be effective with threats.  Larson (1988) and others have applied this framework to political science questions. On the theoretical side, Filson and Werner (2007) use a bargaining setup to explore the sensitivities of costs compared to the sensitivity of giving concessions. 
 %LAKE: The psychological literature as applied in political science spent a lot of time in the 1970s and 1980s focusing on Graduated Reductions in Tensions (GRIT) as a form of confidence building. See Debbie Larson’s work (she’s at Poli Sci, UCLA, I don’t have the cites handy). This is clearly relevant to your discussion of the laboratory experiments on p.3. BH WATSON'S STARTING SMALL COULD BE RELEVANT HERE
 
-This paper will explore the role of concessions as signals, and not only as ends in themselves. Concessions may play either role -- or both -- in conflict resolution. If concessions are used solely for signaling, this can be considered inefficient as value can be lost. We will examine cases where concessions have material value, signaling value, and both. 
+In conflict resolution, concessions may act as signals or as an end in themselves -- or as both simultaneously. One contribution of this paper is that it allows concessions to have material value, signaling value, and both. We will show that when concessions are used solely for signaling, some of the material value of the concessions may be purposefully destroyed and thus inefficiencies can emerge.
 
 In analyzing both the signaling and material value of concessions, an extensive literature on gift giving is particularly helpful. Like concessions, costly gifts have been shown to have a valuable role in relationship building. And the gift giving literature, more so than the concessions literature, focuses specifically on the issue of efficiency. Inefficiency is defined for the purposes of this paper as some sort of money burning: giving a gift or concession that is more costly to the giver than it is valuable to the recipient, that is, using a concession as a signal and not taking advantage of its full inherent value. It is not problematic for giving to also have a signaling component, but it is ideal if the full value of the gift can be transferred. %The theoretical basis for this has its roots in the economics literature on gift giving.  %this needs lots of work and maybe a cite- use def of "inefficiency" in the camerer paper or others
 
-Gift giving as a whole is inefficient (Waldfogel 2009); it has been estimated that Christmas gift-giving is only 75 percent efficient, meaning that the average gift is valued at 75 cents of the dollar that is spent on it (Waldfogel 1993). But merely looking at aggregate numbers blurs together many possible reasons for gift giving. It has even been theorized that buying something that the receiver would not buy himself is an inherent component of gift giving (Thaler 1985). Often, inefficient gifts occur in the formative stages of relationships or in immature relationships (Camerer 1988). Gifts given in established relationships, such as wedding presents or spousal gifts, are more likely to be cash gifts or efficient gifts that are specifically requested or selected from a registry. Since inefficient gift giving is more likely involved in nascent relationships and partnerships, it is natural to suppose that inefficient gifts play a signaling role in addition to the material value of transferring the gift's inherent worth. %Several situations have been proposed where inefficient gifts can help keep types separated in partnership models. However the current literature on inefficiency in gift giving relies on unrealistic special cases that do not apply in more general partnership formation environments. 
+%Gift giving as a whole is inefficient (Waldfogel 2009); it has been estimated that Christmas gift-giving is only 75 percent efficient, meaning that the average gift is valued at 75 cents of the dollar that is spent on it (Waldfogel 1993). But merely looking at aggregate numbers blurs together many possible reasons for gift giving. It has even been theorized that buying something that the receiver would not buy himself is an inherent component of gift giving (Thaler 1985).
 
-In efforts to explain the existence of gift giving,  Camerer (1988) and Van de Ven (2000) give several anthropological explanations for inefficiency. Amongst these explanations are altruism, social mores, and egoism. But the most relevant explanation for the field of international relations is that gift giving is strategic. Camerer also creates a theoretical model using mechanism design that models gifts as costly signals; inefficiency is useful in pre-play communication in order to form relationships between like types. This strategic giving of gifts in societies looks very much like the strategic giving of concessions to remedy conflict situations. When modeled game theoretically, these different environments look even more similar.
+Often, inefficient gifts occur in the formative stages of relationships or in immature relationships (Camerer 1988). Gifts given in established relationships, such as wedding presents or spousal gifts, are more likely to be cash gifts or efficient gifts that are specifically requested or selected from a registry. Since inefficient gift giving is more likely involved in nascent relationships and partnerships, it is natural to suppose that inefficient gifts play a signaling role in addition to the material value of transferring the gift's inherent worth. %Several situations have been proposed where inefficient gifts can help keep types separated in partnership models. However the current literature on inefficiency in gift giving relies on unrealistic special cases that do not apply in more general partnership formation environments. 
+
+In efforts to explain the existence of gift giving,  Camerer (1988) and Van de Ven (2000) give several anthropological explanations for inefficiency. Amongst these explanations are altruism, social mores, and egoism. But the most relevant explanation for the field of international relations is that gift giving is strategic. Camerer also uses mechanism design to model gifts as costly signals; inefficiency is useful in pre-play communication in order to form relationships between like types. This strategic giving of gifts in societies looks very much like the strategic giving of concessions to remedy conflict situations. When modeled game-theoretically, these different environments look even more similar.
 
 Camerer's model includes players that have one period to signal before they decide whether to partner. There are two types, high types and low types, and a separating equilibrium is characterized by a threshold gift that is necessary for high types to reveal themselves while low types do not send a gift (or send a gift of  zero cost). Two high types who have just received each other's gifts will then choose to create a partnership with a positive payoff; other combinations will not find it economical to form a partnership.
 
 Camerer shows that in this general formulation, a costly signaling model will always yield efficient gifts. In order to explain inefficiency, Camerer adds in an additional pre-play period where players must pay a cost in order to enter the game and send and receive gifts. If types separate in the pre-play period with low types not being willing to pay, high types are saved the cost of sending a signal to low types in the main game.  High types would, in some parameterizations, be given incentives to give inefficient equilibrium gifts in the main game in order to lower the low types' expected payoff of playing to below the pay-to-play fee. Such an action can keep out the low types and this can raise the expected payoff for a high type by saving on the gifts given. %While pre-play communication can lead to inefficient gift-giving, it is not realistic to think that partnership formation generally has this structure, therefore while Camerer's explanation is theoretically sound, it lacks the ability to be a general explanation for inefficient gifts. 
 
-Several other papers essentially use Camerer's theoretical explanation for inefficient gifts.  Iannaccone (1992), Rabin (1993),  Kranton (1996) and Carmichael and MacLeod (1997) all use a similar explanation with various modifications to the model. Carmichael and MacLeod (1997) extend the argument to long time frames, arguing that inefficient gifts might arise evolutionarily by keeping ``parasite'' numbers low.  In an environment with repeated opportunities for concessions Watson (1996, 1999) is able to show that a strong relationship can be reached by starting with small gifts and increasing their size as the relationship becomes more committed. Kranton (1996) applies a similar concept to a model resembling Camerer (1988). See Van de Ven (2000) for an analysis of how these papers relate to each other.  
+%Iannaccone (1992), Rabin (1993),  Kranton (1996) and Carmichael and MacLeod (1997) all use a similar explanation for inefficient gifts with various modifications to the model. In an environment with repeated opportunities for concessions Watson (1996, 1999) is able to show that a strong relationship can be reached by starting with small gifts and increasing their size as the relationship becomes more committed.\footnote{See Van de Ven (2000) for an overview of this literature.}  
 
-The second major way to explain inefficient gifts is expressed in Prendergast and Stole (2001). The authors have a result that explains inefficient gift giving by modeling utility of matching--if players are of a like mindset they get an extra benefit; they are willing to take the risk of giving the wrong gift. This explanation has less applications to questions of conflict.
+The second major explanation for inefficient gifts is expressed in Prendergast and Stole (2001). The authors explain inefficient gift giving by modeling the utility of matching. That is, if players are of a like mindset they get an extra benefit so they are willing to take the risk of giving the wrong gift.
 
 % However, there are some inadequacies in the model. In their model, agents derive utility from giving and receiving the ``correct" gift because it signals that a friendship is true. There are two types of receivers, A and B. Givers have a prior belief along the A-B continuum that must remain unknown to receivers for the model to work. Givers can choose to give gift A, gift B, or cash. The technological constraint of only two types/ gifts is crucial to the inefficiency result as well in the sense that the gift is in fact an imprecise signal of the giver's belief. Givers' utility includes altruism and a match payoff. This match payoff means players might be willing to risk giving the wrong gift- hence inefficiency. Altruism (wanting recipients to be happy) keeps a giver from giving a gift if his prior is ambiguous enough. Receivers' utility derives from a match payoff as well as the inherent utility of the gift. One limitation of the model is that if (realistic) cheap talk were allowed in addition to the gift, cash could be sent with a note telling which gift the sender believes is correct to ensure efficiency. Receivers do not tell their type because that would sacrifice the match payoff. The authors ``solve" this issue for givers by claiming bought gifts yield a higher payoff than cash with a note. This last explanation works mathematically but is not a general theory- essentially they just argue ``people like gifts." 
 
-While these several explanations for inefficiency are interesting, we propose another theoretical contribution to explain this real-life phenomenon that is more rooted in a realistic international relations puzzle. The basic formulation of our model is most similar to Camerer (1988) who also uses mechanism design; our model is an expansion of Camerer's analysis. The model can achieve the Camerer result and another similar to that of Prendergast and Stole (2001) but adds a very different explanation for inefficiency. %An extension at the end of our paper compares simultaneous versus sequential concessions in a bilateral negotiation environment. The theory yields results about the effectiveness of different types of enforcement in various circumstances. 
+We propose another theoretical contribution to explain this real-life phenomenon that is more rooted in a realistic international relations puzzle. The basic formulation of our mechanism-design approach is an expansion of Camerer's (1988) analysis. The model can achieve the basic `inefficient gifts' results of Camerer (1988) and Prendergast and Stole (2001) but does so using a very different explanation for inefficiency. %An extension at the end of our paper compares simultaneous versus sequential concessions in a bilateral negotiation environment. The theory yields results about the effectiveness of different types of enforcement in various circumstances. 
 %Since neither the models exemplified by Camerer nor Prendergast and Stole uses a truly general formulation to yield inefficient gift giving % in a one-shot setting,
-This paper expands upon the existing literature by generalizing the analysis using mechanism design theory more extensively than has been done thus far. %The analysis for this paper is more extensive than any of the published papers mentioned and shows where mechanisms can and cannot improve upon the benchmark bilateral results. 
-The basic model is a costly signaling model, at its root similar to ideas in Spence (1973) and subsequent papers. See Connelly et al. (2011) for a review of the costly signaling literature. In essence, the model shows that if concessions can be later used against the party that gives, then giving inefficient concessions can be in their best interest. While our model is tailored to an international relations setting, the mathematical explanation for inefficient giving of concessions may be more broadly applicable.   
+%This paper expands upon the existing literature by generalizing the analysis using mechanism design theory more extensively than has been done thus far. %The analysis for this paper is more extensive than any of the published papers mentioned and shows where mechanisms can and cannot improve upon the benchmark bilateral results. 
+The basic model is a costly signaling model, at its root similar to ideas in Spence (1973) and subsequent papers.\footnote{See Connelly et al. (2011) for a review of the costly signaling literature.} In essence, the model shows that if concessions can be later used against the party that gives, then it can be in a negotiating party's best interest to give inefficient concessions. While our model is tailored to an international relations setting, the explanation for inefficient giving of concessions may be more broadly applicable.   
 
 %In these and many other situations, a lack of trust is an impediment to peace, preventing parties from making necessary concessions. Mediation has long been understood as a mechanism for reducing mistrust, but in much of the published literature on international conflict mediation lacks a rigorous theoretical framework.
 
-Third party involvement is ubiquitious in conflict and mediation has been extensively studied in the literature, but still the question of third party effectiveness is intensely debated.  Some authors have concluded that mediation has little impact, (Bercovitch 1996;  Bercovitch and Langley 1993; Fortna 2003) while others insist that a correct analysis finds mediation playing a positive role in resolving conflict (Dixon 1996; Beardsley et al. 2006).  But the term mediation encompasses a broad range of actions and interactions, making any one-size-fits-all conclusion on the efficacy of mediation suspect. The type of mediation affects the negotiation outcome (Bercovitch 2000; Beardsley et al. 2006) and timing is important (Greig 2005a). It is essential to focus more precisely on the specific actions and environments that make use of a certain type of mediation, which is how we approach the question. This paper models an environment where the primary issue is trust, not uncertainty about an opponent's capabilities, and where a mediator is employed who has certain manipulative abilities---as defined below. 
+This demonstration of the incentives for inefficient concessions leads to a new explanation for the role of mediators in conflict resolution. Third party involvement is ubiquitious in conflict and mediation has been extensively studied in the literature, but still the question of third party effectiveness is intensely debated.  Some authors have concluded that mediation has little impact, (Bercovitch 1996;  Bercovitch and Langley 1993; Fortna 2003) while others insist that a correct analysis finds mediation playing a positive role in resolving conflict (Dixon 1996; Beardsley et al. 2006).  But the term mediation encompasses a broad range of actions and interactions, making any one-size-fits-all conclusion on the efficacy of mediation suspect. The type of mediation affects the negotiation outcome (Bercovitch 2000; Beardsley et al. 2006) and timing is important (Greig 2005a).
 
-Mediation rarely occurs in the absence of violent conflict (Bercovitch 1996; Beardsley 2006). In this paper, parties are in conflict and can benefit from seeking mediation in order to overcome mistrust. Parties are more likely to seek mediation when they are entrenched in costly conflict (Bercovitch and Jackson 2001; Greig 2005b; Greig and Diehl 2006; Terris and Maoz 2005; Svensson 2008). Alternatively, parties may seek a mediator to justify difficult concessions and avoid angering domestic constituencies (Allee and Huth 2006, Beardsley 2010). These empirical results, while interesting, have generally lacked strong theoretical foundations. Mediation is used, but why actors use it is not well understood. This paper helps to fill this gap by explaining at least one of meditation's roles. %NEED TO EDIT THIS PARAGRAPH- WHICH EMPIRICAL RESULT!!!!!(S)
+It is essential to focus more precisely on the specific actions and environments that make use of particular types of mediation, which is how we approach the question. This paper models an environment where the primary issue is trust, not uncertainty about an opponent's capabilities, and where a mediator is employed who has manipulative abilities. Mediation rarely occurs in the absence of violent conflict (Bercovitch 1996; Beardsley 2006). In this paper, parties are in conflict and can benefit from seeking mediation in order to overcome mistrust. Parties are more likely to seek mediation when they are entrenched in costly conflict (Bercovitch and Jackson 2001; Greig 2005b; Greig and Diehl 2006; Terris and Maoz 2005; Svensson 2008). Alternatively, parties may seek a mediator to justify difficult concessions and avoid angering domestic constituencies (Allee and Huth 2006, Beardsley 2010).
 
-In the theoretical literature, mediation has most recently been modeled using mechanism design (Fey and Ramsay 2008, 2010 and 2011; Bester and Warneryd 2006; and Horner et. al. 2010). 
-
+These empirical results have until recently lacked strong theoretical foundations. Mediation is used, but we are only beginning to understand why actors use it. Recently, mediation has begun to be modeled using mechanism design for settings where militarization or the resolve to fight are private information (Bester and Warneryd 2006; Fey and Ramsay 2008, 2010 and 2011; Horner et. al. 2010; Meirowitz et al. 2012, 2013). This paper expands the theoretical literature by modeling the role of mediation when information is asymmetric about parties' abilities to commit to peace. Here, a mediator can remove the incentive to make concessions that are inefficient. 
 
 
 \section{Model} %A DIFFERENT MODEL BUT SAME RESULT AS FR 10; THIS SHOULD BUILD OUR CONFIDENCE IN MODELLING. EMPHASIZE SCENARION (EGYPT USRAEL ETC) THAT ARE BETTER TO MODEL WITH Our MODEL. IT CAN ALSO BE THOUGHT OF AS REDUCED FORM OF A BARGAINING MOEL, BUT IT DOES NOT NEED TO BE! NEED TO GIVE EXAMPLES WHERE Our MODEL IS BETTER THAN BARGAINING- EXAMPLES. WHEN TRUST IS AN ISSUE (PUT THIS IN THE TRUST SECTION)
@@ -294,7 +296,7 @@ Since the low type IC constraint binds, the only way which a mechanism can impro
 The improvements by the mediator here do not rely on the mediator's private information as in the models of Kydd (2003), Rauchhaus (2006) and Smith and Stam (2003). Therefore the mediator's preferences need not be a huge factor in her participation. So long as the costs are small enough to be worth her participation the mediator can effectively enter and assist in solving the conflict.
 
 
-The value of truth telling by the mediator has been brought up in the literature. Kydd (2003) studies bias in mediation and how a mediator can credibly communicate information to the parties. Conversely Horner et al. (2010) rely on the mediator to ``hoard'' information in order to be able to improve on unmediated interaction. In our model, a successful mediator relies on the parties trusting her. However, here the mediator had no incentive to lie: lying can only potentially hurt the high types, the only type who the mediatorcan possibly help.
+The value of truth telling by the mediator has been brought up in the literature. Kydd (2003) studies bias in mediation and how a mediator can credibly communicate information to the parties. Conversely Horner et al. (2010) rely on the mediator to ``hoard'' information in order to be able to improve on unmediated interaction. In our model, a successful mediator relies on the parties trusting her. However, here the mediator had no incentive to lie: lying can only potentially hurt the high types, the only type who the mediator can possibly help.
 
 
 \section{Conclusion}
@@ -467,6 +469,11 @@ This is simplified to preferring the concessions separating equilibrium if and o
 
 \item Larson, Deborah Welch. (1987). ``The psychology of reciprocity in international relations.'' \emph{Negotiation Journal.} 4:3, 281-301.
 
+\item Meirowitz, Adam; Massimo Morelli; Kristopher W. Ramsey and Francesco Squintani. (2013). ``Mediation and Strategic Militarization.'' Unpublished manuscript.
+
+\item Meirowitz, Adam; Massimo Morelli; Kristopher W. Ramsey and Francesco Squintani. (2013). ``Dispute Resolution Institutions
+and Strategic Militarization.'' Unpublished manuscript.
+
 \item Myerson, Roger B. (1979). ``Incentive Compatibility and the Bargaining Problem." \emph {Econometrica} 47, 61-73. 
 
 %\item Osgood, Charles E. (1962). \emph {An alternative to war or surrender.}  Oxford, England: University of  Illinois Press.
@@ -487,15 +494,15 @@ This is simplified to preferring the concessions separating equilibrium if and o
 
 \item Terris, Lesley G. and Zeev Maoz. (2005). ``Rational Mediation: A Theory and a Test.'' \emph{Journal of Peace Research} 44:5, 563-583. 
   
-\item Thaler, Richard. (1985). ``Mental Accounting and Consumer Choice.'' \emph{Marketing Science} 4:3, 199-214.
+%\item Thaler, Richard. (1985). ``Mental Accounting and Consumer Choice.'' \emph{Marketing Science} 4:3, 199-214.
 
 \item Van Damme, E. (1989). ``Stable equilibria and forward induction. \emph{Journal of Economic Theory} 48:2, 476-496. 
  
 \item Van de Ven, Jeroen. (2000).``The economics of the gift.'' Unpublished manuscript. 
 
-\item Waldfogel, Joel (2009). \emph{Scroogenomics: Why You Shouldn't Buy Presents for the Holidays}. Princeton: Princeton University Press.
+%\item Waldfogel, Joel (2009). \emph{Scroogenomics: Why You Shouldn't Buy Presents for the Holidays}. Princeton: Princeton University Press.
 
-\item Waldfogel, Joel (1993). ``The deadweight loss of Christmas,'' \emph{The American Economic Review} 83:5, 1328-1336.
+%\item Waldfogel, Joel (1993). ``The deadweight loss of Christmas,'' \emph{The American Economic Review} 83:5, 1328-1336.
 
 \item Walter, Barbara F. (2002). \emph{Committing to Peace: The Successful Settlement of Civil Wars.} Princeton: Princeton University Press.
 
