update abstract for submission to Midwest Theory (Purdue)

--- a/draft.tex
+++ b/draft.tex
@@ -49,7 +49,7 @@ University of California, San Diego\\
 
 
 \begin{abstract}
-When two parties are engaged in conflict and each distrusts the other's willingness to pursue peace, concessions can be used to indicate an interest in making peace. We demonstrate that a lack of trust can prevent optimal concessions from being made, creating inefficiencies in negotiation that can reduce the possibility of peace. We use a game-theoretic model to explore ways in which a third party mediator can act as a guarantor that promised concessions will be delivered, thereby reducing inefficiencies and increasing the potential for peace. In this process, we open up a rationale for mediation: to remove the inefficiencies of signaling in a preliminary round of negotiations. 
+When two parties are engaged in conflict and each distrusts the other's ability to pursue peace, concessions can be used to indicate an interest in making peace. We demonstrate that a lack of trust can prevent optimal concessions from being made, creating inefficiencies in negotiation that can reduce the possibility of peace. We use mechanism design to explore ways in which a third party mediator can act as a guarantor that promised concessions will be delivered, thereby reducing inefficiencies and increasing the potential for peace. In this process, we open up a rationale for mediation: to remove the inefficiencies of signaling in a preliminary round of negotiations. 
 \end{abstract}
 
 \section{Introduction} %LAKE For instance, the problem you begin with in the cases of Israel/Syria and West Bank are well understood as bargaining over assets that confer future power. But this is not understood as a problem of private information, as you treat it here, but as one of credible commitment. Its not clear how your types map onto the commitment problem. HOW: THAT TYPES COULD CHANGE OVER TIME?
