date/title/author modifications to presention

--- a/presentation.tex
+++ b/presentation.tex
@@ -46,9 +46,9 @@
   \item[]}{\end{list}} 
 
 \begin{document}
-\title[Unrecognized States: A Theory of Self-Determination and Foreign Influence\hspace{1.25in}\insertframenumber/\inserttotalframenumber]{Unrecognized States: A Theory of Self-Determination and Foreign Influence}
-\author[Kristy Buzard, Benjamin Graham and Ben Horne]{Kristy Buzard, Benjamin Graham and Ben Horne\\ kbuzard@syr.edu}
-\date{September 23, 2016}
+\title[Inefficient Concessions and Mediation\hspace{2.95in}\insertframenumber/\inserttotalframenumber]{Inefficient Concessions and Mediation}
+\author[Kristy Buzard and Ben Horne]{Kristy Buzard and Ben Horne\\ kbuzard@syr.edu}
+\date{December 3, 2016}
 \maketitle
 %\insertpresentationendpage removed b/c of appendix
 
@@ -124,10 +124,6 @@ We add some more realistic elements:
 \subsection{Economic and Political Structure}
 \begin{frame}{Timeline}
 \pause
-\begin{figure}
-\includegraphics[width=\linewidth,height=\textheight,keepaspectratio]{Timeline2.pdf}
-%\caption{Timeline}
-\end{figure}
 \end{frame}
 
 
